[build-system]
requires = [
	"setuptools >= 61",
	"setuptools_scm",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lyscripts"
description = "Package containing scripts used in lynference pipelines"
authors = [
	{name = "Roman Ludwig", email = "roman.ludwig@usz.ch"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["scripts", "lymph", "inference"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pandas",
    "emcee",
    "h5py",
    "tables",
    "matplotlib",
    "corner",
    "scipy",
    "xlrd",
    "rich",
    "rich-argparse",
    "pyyaml",
    "lymph-model < 1",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/rmnldwg/lyscripts"
documentation = "https://rmnldwg.github.io/lyscripts"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "isort",
    "pycln",
    "pylint",
]
docs = [
    "pdoc",
]
tests = [
    "pytest",
    "pytest-mpl"
]
apps = [
    "streamlit"
]

[project.scripts]
lyscripts = "lyscripts:main"

[tool.setuptools.packages.find]
include = ["lyscripts"]

[tool.setuptools_scm]
write_to = "lyscripts/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = {attr = "lyscripts._version.version"}

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pycln]
all = true
